Fixed page title font size on smaller screens.

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -17,7 +17,8 @@ h1, h2, h3, h4, h5{
 }
 
 h1{
-  font-size: 5rem;
+  font-size: 3.5rem;
+  font-size: max(3.5rem,4.5vw);  
   text-transform: uppercase;
 }
 
